--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "npm": "6.5.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "node"
@@ -17,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   },
