--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "mongoose": "^5.4.2",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
