--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "author": "Ye Yuan",
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.2",
     "nodemon": "^1.18.9",
